[package]
name = "variant-rs"
description = "VARIANT support for Rust. Clean, idiomatic handling of WinAPI/COM results."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tom Niget <niget.tom@gmail.com>"]
repository = "https://github.com/zdimension/variant-rs"
categories = ["data-structures"]
keywords = ["com", "windows", "variant", "winapi"]

[dependencies]
chrono = "0.4.19"
enumn = "0.1.3"
rust_decimal = "1.22.0"
widestring = "0.5.1"
winapi = { version = "0.3.9", features = ["oaidl", "oleauto"] }

[dev-dependencies]
rust_decimal_macros = "1.22.0"
