[package]
name = "variant-rs"
description = "VARIANT support for Rust. Clean, idiomatic handling of WinAPI/COM results."
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Tom Niget <niget.tom@gmail.com>"]
repository = "https://github.com/zdimension/variant-rs"
categories = ["data-structures"]
keywords = ["com", "windows", "variant", "winapi"]

[dependencies]
chrono = "0.4.23"
enumn = "0.1.6"
paste = "1.0.11"
rust_decimal = "1.27.0"
thiserror = "1.0.38"
widestring = "1.0.2"
windows = { version = "0.43.0", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Ole"] }

[dev-dependencies]
rust_decimal_macros = "1.22.0"
